# SwitchPalace

./: .impeccable.md  CMakeLists.txt  Dockerfile  Makefile  ui-mockup.html
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-install-pipeline/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
include/install/: hfs0.hpp  install.hpp  nca_writer.hpp  nsp.hpp  pfs0.hpp  xci.hpp
include/nx/: applet.hpp  content_mgmt.hpp  ticket.hpp
include/ui/: dialogs.hpp  file_browser.hpp  install_view.hpp  progress_bar.hpp  summary_view.hpp
include/util/: crypto.hpp  file_util.hpp
resources/xml/: file_browser.xml  install_view.xml  summary_view.xml
source/: main.cpp
source/install/: hfs0.cpp  nca_writer.cpp  nsp.cpp  pfs0.cpp  xci.cpp
source/nx/: applet.cpp  content_mgmt.cpp  ticket.cpp
source/platform/: switch_wrapper.c
source/ui/: dialogs.cpp  file_browser.cpp  install_view.cpp  progress_bar.cpp  summary_view.cpp
source/util/: crypto.cpp  file_util.cpp
tests/host/: Makefile  test_hfs0.cpp  test_pfs0.cpp
tests/host/fixtures/: README.md
